copyright tag added and title updated

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Mail-Verification</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <h3>MAIL_VERIFCATION::</h3>
@@ -24,7 +25,7 @@
       <input type="text" id="otpInput"/>
       <button id="otpSubmit">Submit</button>
     </div>
-
+    <div class='copyright-tag'> Copyright 2023 &#169; Developed by Naresh Baleboina. All Rights Reserved </div>
     <script src="script.js"></script>
   </body>
 </html>
